# CITIROC_Ana

./: DPNCunpack.cpp
babymind_unpackingfw7/examples/: .#babyMindUnpack.cpp  BabyMIND_ToT_Amplitude_matching.cpp  ButterflyPlots.cpp  CMakeLists.txt  DPNCunpack.cpp  GSpillSearch.cpp  GTrigTagSearch.cpp  HG_LG_calib.cpp  HG_reconstructed.cpp  HG_vs_ToT_calib.cpp  LG_vs_ToT_calib.cpp  ListButterflyPlots.cpp  ListButterflyPlots.cpp~  babyMINDTDMUnpack.cpp  babyMindCalibration.cpp  babyMindDataQualityCheck.cpp  babyMindGainStudy.cpp  babyMindPedSearch.cpp
babymind_unpackingfw7/examples/backup/: ListButterflyPlots.cpp  ListButterflyPlots2.cpp
